# CargoCode

./: pyproject.toml  requirements.txt
account/: admin.py  models.py  serializers.py  urls.py  views.py
account/migrations/: 0001_initial.py  0002_alter_driver_car_type.py  0002_company3ver_email.py  0002_company_per_km.py  0003_driver_per_km_alter_company_per_km.py  0003_remove_company3ver_email.py  0004_alter_user_email.py  0004_company3ver_weekends.py  0005_alter_user_email.py  0005_remove_company3ver_weekends.py  0006_alter_user_groups_alter_user_user_permissions.py  0006_company3ver_weekends.py  0007_driver_weekends_alter_company3ver_weekends.py
chat/: consumers.py  models.py  serializers.py  urls.py  views.py
chat/migrations/: 0001_initial.py
main/: .gitignore  asgi.py  requirements.txt  settings.py  tokenauth_middleware.py  urls.py
main/account/: serializers.py  urls.py  views.py
main/account/migrations/: 0001_initial.py  0002_alter_driver_driver_license_alter_driver_straxovka.py  0003_alter_driver_driver_license_alter_driver_straxovka.py
maps/: tests.py  urls.py  views.py
order/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py  visuals.py
order/migrations/: 0001_initial.py  0002_orderstack_driver_id_orderstack_driver_type.py
reviews/: models.py  serializers.py  urls.py  views.py
reviews/migrations/: 0001_initial.py
tracking/: admin.py  models.py  serializers.py  urls.py  utils.py  views.py
tracking/migrations/: 0001_initial.py
